--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="I.DEV - programmers for you 💪 software development" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="manifest" href="./manifest.json" />
   <title>I.DEV</title>
